[package]
name = "imstr"
version = "0.1.0"
edition = "2021"
description = "Cheaply clonable and slicable immutable strings"
documentation = "https://docs.rs/imstr"
repository = "https://github.com/xfbs/imstr"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
license = "MIT"

[dependencies]
peg-runtime = { version = "0.8.1", optional = true }
serde = { version = "1.0.159", optional = true }

[dev-dependencies]
peg = "0.8.1"

[features]
default = ["std"]
serde = ["dep:serde"]
std = []
alloc = []
peg = ["dep:peg-runtime"]
