[package]
name = "imstr"
version = "0.1.0"
edition = "2021"
description = "Cheaply clonable and slicable immutable strings"
documentation = "https://docs.rs/imstr"
repository = "https://github.com/xfbs/imstr"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
license = "MIT"

[dependencies]
peg-runtime = { git = "https://github.com/stevefan1999-personal/rust-peg", branch = "patch-no-std-runtime", version = "0.8.0", default-features = false, optional = true }
serde = { version = "1.0.159", optional = true }

[dev-dependencies]
peg = { git = "https://github.com/stevefan1999-personal/rust-peg", branch = "patch-no-std-runtime", version = "0.8.0", default-features = false }

[features]
default = ["std"]
serde = ["dep:serde"]
std = ["peg-runtime?/std", "peg/std"]
peg = ["peg-runtime"]
