[package]
name = "imstr"
version = "0.1.0"
edition = "2021"
description = "Cheaply clonable and slicable immutable strings"
documentation = "https://docs.rs/imstr"
repository = "https://github.com/xfbs/imstr"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
license = "MIT"

[[bench]]
name = "bench"
harness = false

[dependencies]
peg-runtime = { git = "https://github.com/stevefan1999-personal/rust-peg", branch = "patch-no-std", version = "0.8.0", default-features = false, optional = true }
serde = { version = "1.0.159", optional = true }

[features]
default = ["std"]
# enable serde integration (serialize and deserialize ImString)
serde = ["dep:serde"]
# enable peg integration (parse ImString)
peg = ["dep:peg-runtime"]
std = ["peg-runtime?/std", "peg/std"]

[dev-dependencies]
criterion = "0.4.0"
peg = { git = "https://github.com/stevefan1999-personal/rust-peg", branch = "patch-no-std", version = "0.8.0", default-features = false }
